--- a/sources/project.properties
+++ b/sources/project.properties
@@ -10,3 +10,4 @@
 # Project target.
 target=android-14
 android.library.reference.1=../ActionBarSherlock
+android.library.reference.2=C:/Users/ReeJK/eclipse/gridlayout_v7
